<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actMainToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actMainTxtBaslik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="Oturum Aç"
        android:textAlignment="center"
        android:textSize="42sp"
        android:textStyle="bold"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actMainToolbar" />

    <TextView
        android:id="@+id/actMainTxtKullaniciAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/actMainTxtKullaniciAd"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="64dp"
        android:paddingStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actMainTxtBaslik"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/actMainEdtKullaniciAd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/actMainEdtKullaniciAd"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actMainTxtKullaniciAd" />

    <TextView
        android:id="@+id/actMainTxtKullaniciSifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/actMainTxtKullaniciSifre"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        android:paddingStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actMainEdtKullaniciAd"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/actMainEdtKullaniciSifre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/actMainEdtKullaniciSifre"
        android:inputType="textPassword"
        android:maxLength="20"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actMainTxtKullaniciSifre" />

    <Button
        android:id="@+id/actMainBtnOturumAc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:text="@string/actMainBtnOturumAc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/actMainBtnHesapOlustur" />

    <Button
        android:id="@+id/actMainBtnHesapOlustur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/actMaibnBtnHesapOlustur"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actMainEdtKullaniciSifre" />

    <TextView
        android:id="@+id/actMainTxtSifremiUnuttum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/actMainTxtSifremiUnuttum"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actMainBtnHesapOlustur" />
</androidx.constraintlayout.widget.ConstraintLayout>