<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListeAyarlariActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actListeAyarlariToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actListeAyarlariTxtListeBaslik"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="4dp"
        android:text="@string/actListeAyarlariTxtListeBaslik"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actListeAyarlariToolbar" />

    <EditText
        android:id="@+id/actListeAyarlariEdtListeBaslik"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ems="10"
        android:hint="@string/actListeAyarlariEdtListeBaslik"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actListeAyarlariTxtListeBaslik" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actListeAyarlariEdtListeBaslik" />

    <TextView
        android:id="@+id/actListeAyarlariTxtListeArkaPlan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/actListeAyarlariTxtListeArkaPlan"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <Spinner
        android:id="@+id/actListeAyarlariSpListeArkaPlan"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actListeAyarlariTxtListeArkaPlan" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="20dp"
        android:background="@color/gray"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actListeAyarlariSpListeArkaPlan" />

    <TextView
        android:id="@+id/actListeAyarlariTxtListeUyeleri"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="16dp"
        android:paddingHorizontal="4dp"
        android:text="@string/actListeAyarlariTxtListeUyeleri"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/actListeAyarlariRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="4dp"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actListeAyarlariTxtListeUyeleri" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actListeAyarlariFabUyeEkle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:tint="@color/white"
        android:layout_marginTop="32dp"
        app:backgroundTint="@color/green_primary"
        app:layout_constraintBottom_toBottomOf="@+id/actListeAyarlariTxtListeUyeleri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/actListeAyarlariTxtListeUyeleri"
        app:srcCompat="@drawable/ic_person_add" />
</androidx.constraintlayout.widget.ConstraintLayout>